# ChangeLog for dev-tcltk/tclpython
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tcltk/tclpython/ChangeLog,v 1.17 2011/05/23 07:17:52 tomka Exp $

  23 May 2011; Thomas Kahle <tomka@gentoo.org> tclpython-4.1-r2.ebuild:
  x86 stable per bug 364825

  11 May 2011; Christoph Mende <angelos@gentoo.org> tclpython-4.1-r2.ebuild:
  Stable on amd64 wrt bug #364825

  06 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  tclpython-3.1-r1.ebuild, tclpython-4.1-r2.ebuild:
  Fix deprecation warnings.

  07 Dec 2010; Justin Lecher <jlec@gentoo.org> tclpython-3.1-r1.ebuild,
  tclpython-4.1-r2.ebuild:
  Cleaned Python ABI specific code, #312217

  21 Apr 2010; Justin Lecher <jlec@gentoo.org> -tclpython-3.1.ebuild,
  -tclpython-4.1-r1.ebuild:
  Removed version which do not support new python stuff

  12 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  tclpython-3.1-r1.ebuild:
  x86 stable wrt bug #312507

  05 Apr 2010; Justin Lecher <jlec@gentoo.org> tclpython-3.1-r1.ebuild,
  tclpython-4.1-r2.ebuild:
  Underlinking fixed, all src files get compiled, #313255

*tclpython-4.1-r2 (31 Mar 2010)
*tclpython-3.1-r1 (31 Mar 2010)

  31 Mar 2010; Justin Lecher <jlec@gentoo.org> +tclpython-3.1-r1.ebuild,
  +tclpython-4.1-r2.ebuild:
  Adopted to new python situation, #312507, minor QA

*tclpython-4.1-r1 (16 Apr 2009)

  16 Apr 2009; Federico Ferri <mescalinum@gentoo.org>
  +tclpython-4.1-r1.ebuild:
  Correct usage of `python-config`. Fixes bug #247190.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*tclpython-4.1 (03 May 2006)

  03 May 2006; <solar@gentoo.org> tclpython-3.1.ebuild,
  +tclpython-4.1.ebuild:
  - version bump and fixed bug with ebuild handling stripping directly

  21 Dec 2005; Marien Zwart <marienz@gentoo.org> tclpython-3.1.ebuild:
  Correct homepage.

  02 Sep 2005; Luis Medinas <metalgod@gentoo.org> ChangeLog:
  Marked Stable on AMD64.
