@@ -1,6 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 DIST tclpython-3.1.tar.gz 6242 SHA256 b1126363be333352e15d65451cacd36be95b479c4b6c80871f32511cd1914bfe SHA512 5478ad43daeae306ceb85e4c264d6b10ead79eca9781cda58f3148c5409b71e58b53c4932e53de82b3a0a6025683be2ed848706e729679599ef55206c44a68ea WHIRLPOOL 67e11b6899b94532a28027d16115d1010d2a49378e0876d75b3f28a50313d58ebc6dab226a43d35925fd0761be1d0cc19590698528f911d06d558fee01c4d619
 DIST tclpython-4.1.tar.bz2 10580 SHA256 663e0e9e16875fda8e98fd8c74108475062b5e96dcf7145b46142b16c289db50 SHA512 5f08e7129a7d9afeb1ac6bf1ab1c83ad3bb481593c9516c0653c7b4ba0dfb1b3129a336e64b998cec8ef2d2377a6a366b73c640d25839ab280d5079c0b220d54 WHIRLPOOL a3535555eb314dd19f54628135053c4eac0a9cb79cc1be7cca3b8f861c826438765fa98513fc7f7ac3271fd4fef7f9f70e036421a5b7991035b328b63239ba03
 EBUILD tclpython-3.1-r1.ebuild 1281 SHA256 23914377e398e986705d86f2edcbfa9ee1d565549f188a934fe6590a8441e497 SHA512 bac68f9729d1287f73630fece7d63b5a6d4b8ec1675b435518973d1ad2d720fedee8deedd8bf479602d2723166584c29a4ff6144aa18caa957458f8fd497ae85 WHIRLPOOL dbc33ad351d8adec28d32e88d7f867da9f6a01cfef7dc2a222386d7de57489fadfa00c107937ad51b075cc918f4542aa45d9c1e6e72131b0be3a708bfb1d7fac
 EBUILD tclpython-4.1-r2.ebuild 1299 SHA256 6f14585c74c41c414c6dc8e0bc1218a5bdd3425e77e29e0ea1efdeda0262ab00 SHA512 89a719d41b7f8d17439e5b671d1edc42706ec9cee2006da7ea55c64bba9b44f309b8ea304afa956d9487ae8b09d740ac7d35a5a2aaad8006541170255a09523a WHIRLPOOL c9a9d398cac0744c291afdb879f2941617597e55f2bd183130732503123575d1d240ca0e915f3fb6a4467bc8337dcf2bde8b4d129db943ce758f15ab8c068d55
-MISC ChangeLog 2268 SHA256 5b930c64ba217941c95a78a0f57b41f03ca21535e27f25d10bd16bcc18e9af37 SHA512 7d500822f3f003083d16b7b911cb8bfcbe8e179c24839a66195b1e9d18be6131289b5f7c74286c42af5b6d7a66968506bc32b01c2bacb17f9b22e760f1656443 WHIRLPOOL 139b1432321658deee8b493ecb6ab6d4eb2eacfa114089ac3f1b17a4f72ffd778a56792e69c45acfbe08e8ffb047583dce99f1dabfbe062fd613e431cde3e84b
-MISC metadata.xml 158 SHA256 62fb2b0a899315973de885234e3931a2f652b343b68f90fe0778378fdca6f290 SHA512 60ffb8f937083ebfa2a70b1a3ac90bd9ca29cae6194ab77341a78c17d44123cedf5bf740611910e9a2f65585d0973e489bb6062471d26d0a5107e1e8b7f267ae WHIRLPOOL ef7a6760bc24a47df7eb857c63984981cf6b92fc52ce6cb4f71d937308dbbb94590841c5870bf0d6d550084f8dbe59707be14e61e3482267c5268c8f7d3a1080
+EBUILD tclpython-4.1-r3.ebuild 1286 SHA256 4550654da1d8d067cc145543ae43a9b9bc1c69ffc783f0fe648316d81e34ad3f SHA512 2c9f7fae3eb5a56988249737f09de187e3395b7b651a4c00d3c11dfd17ceb3b6480e9253cc249ef26e2d58163f9f8b48bd4049c1783f418839f70c510e3eb831 WHIRLPOOL 817a5a6284b1f445c60dbb1776388e5a8ee6fddb292af519815ddb2ff697eb335116a24ef25d8f05c561cd42d4ca82cbe5e180ba89f1494c0e47c3625cf02682
+MISC ChangeLog 2457 SHA256 92683444d795f240428e05237c63efdc1d0a719462b8a26c00dac3c6e532f34d SHA512 d94fba3c9c58cf44b57ca20bff8b85538091ed9c19d24f8e486bc9baf3c74612bbfbc871b91691a449820dbe34ce47b2199cbbb8fe86c1f7702c50b758a7f3d7 WHIRLPOOL 905aa6dcf7c1738f1f2eec9f01d991001c31c5360d5a94f1c3e724932e06b394471ce75b9f2cfe6da48933ceabb016bbc7b2b0f02fd30f876fb74e74f78584a7
+MISC metadata.xml 160 SHA256 225a6f78d287329cdf2f4ed57468be28bd6565fd9a62207c2cc48e25ac9d3537 SHA512 a50627bda9ed953daf422b5a2e89b5b64e296d1a023d767c8a4ebb2cd51cd0036cecce455762a54e7d669f94d17d9de21052bac94fc08b1365ef42eb2f267742 WHIRLPOOL 61fa22d50aaf2bdecc467e26c9675cf7949ad55a4a8821730c91d1bd73f83fc4c35660851961310efa450e337a7ef572a925e186b8b05984d6315efc509fd365
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCgBmBQJUTUFCXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViraYsP/ilH2rZ51DYVbGcD/0hl3nfo
+8QOFMFHVa1W4ngVzxthcar7xJH72vMU6HURT86KP2SzBCt9s+Po872r5+1fivrIx
+eXUfhuPJ4cYEdkTlvHTEBnsW5ioaBOwGWg92EfmRd0OMYc/MovInj6zEcrzm/dx7
+rbqQIZmd5DlZAIqBfnJQ3j1o9kRjaIJFgvSO0+hnpBHmxQ+kiA0e2z4m/SqzdC1L
+KPejCvfdzk2j4Ruu/ZWja7JVpPMJtAo/n4yzFpxNXsykHhZfhaX+SWqW7oztEG+E
+9/CwLNbJBspxNBIAc2r/k9cplXLQ2QwdsL4NpWCvQ4ANIBZoRdQcEmXrUxHmlfqK
+hyImRRwoAFwwbsH/dut+o7h6cs0zq248DRcwnGgGIS9Ll0Cgan8a3uRryNkxhsP+
+pODLLW+17Kfno7QpohOssXBWYD93typC27OHCNiS2FipAPIxo3AHvdTZ75vkIbgq
+uPnayo50RhDl/VHeQxaPwKZ4sGULWdYOHsRTUcrFSChJUjqp4xVcb8ZcUmYW7QLq
+3jzrG0TInnE+vR1ADqZA9KpW8ZHuiH+efPP6WJRfrAjvS90n8hEAtnrpMwLUPiUL
+eYF7ahRza6hl3CsqrRYmZCUdCBBR/h5WmCIqrJaaWlkenqEkO0YZxNbIn3c6JlU3
+IDtSJ3rgf96PsPmQ7B5N
+=7Rep
+-----END PGP SIGNATURE-----
