@@ -7,25 +7,25 @@ DIST scikit-learn-0.14.1.tar.gz 23228378 SHA256 4c317cabb56c61f4c574879b53aa6bbe
 DIST scikit-learn-0.15.1.tar.gz 7034220 SHA256 4b13456727b9310857f12cc7b9d1c62d59f3ef602fea9d391afc0c8c847ed17d SHA512 4c2e68b1bb75c85c2a83605a32ba5adbd224bc25b19fca85e18dbe24f20cbe51cbfb02be546a4f05fc190f77e438cb17c6a5d69026455e8c11907599462f9984 WHIRLPOOL e1bc387b013abcab18d8ee0545dda543bb098b9d7636229880dea667fc4627d1822fe8a430a2d26dbafcc0b0e90326d5529245e6eff1345b73fc5a24b7a51096
 EBUILD scikits_learn-0.13.1.ebuild 2267 SHA256 1aa938ea04737f05a52e51467393bbc9237dc5b1ca9f49d404f85f5aa83a85ca SHA512 84eebeae5bc347ae06c0d7096568eab78e87791f3bd15925169c40e614893619eac9a56030a3e57a98fb06fd167d3226ad28efb4bc988da275cc738cac08b1e6 WHIRLPOOL 05dcfafe226dbbde8311248d44cc8658b7247f6bd4b12eaddc066b0671a72c5785932f8726d87c272fad09e995e69a29c13308eade3ce10245ebe61056e4c660
 EBUILD scikits_learn-0.14.1.ebuild 2960 SHA256 bd4cc3401fa190c2e1406e05a037e13e543e6f7d301c5bd1ced3323d3b236158 SHA512 0c1a8116f4b58f296c0c38052e89e469385544cb4cc3b2581e08bd8ab2a6b1154b1e86847d7aabac2de1336cd6c4657083c9428446431b3ee8fe63f8d5afbc73 WHIRLPOOL 1e8f7152d9f46c37ab13f6d503caca0c4bbb4b10ef3df55620184066ab2b8adfbe2913a015da4cacdf26df33af5d4e1d5c41ce8fda3ee28acd715a72dd0d22fd
-EBUILD scikits_learn-0.15.1.ebuild 2968 SHA256 e758ffd25a740e7586648cbcc88840fd6cf8b76f159ced5453eba4d2f1d84fde SHA512 48bc5774e4fc33b1990cd74752c28946402d52ca62a137de01b6a16e408ca5cb16b9d1ace19dee1b68d99abe1ca6e9604e8df22c046dec1a49a5d35bfcce9dd1 WHIRLPOOL b5afb86fd2f5f687576031fd87762c757fcb319a3e81f59d99cd0c4dff0236ec6b62357cab47af19371a8c1eff9d0a0a7a74be581e02662a814540b3aec40140
-MISC ChangeLog 5169 SHA256 99ca1a0beaf68a14eb066b9a40b623f76148fb8670d73877551d5ded68cd71b1 SHA512 de599d427b28aea2323be087b968c7e1d7893559475849943e37db9126e27fa4f92ffbeec865af7e5330ed20ec6d838771f8fdd70d094ce266bfcc9bbf179921 WHIRLPOOL 8a9a4edebe1b589ab890bca0b9d64b9223ff9f73494c2684ea72388c7369779d25b3dda94e257ff72e100b5fa41112bf86ce64e20e213ef87c31976ba52b4849
+EBUILD scikits_learn-0.15.1.ebuild 3008 SHA256 225d5bd18a1cc9d66ec616992f084930304d6bbaee91462b7a02119c6fc9a831 SHA512 8f87d7a5a020cc789037207f97c060d4c98ca37274fee36f21743984ae243105f318238098bcd6d4b66e0c257492632a18888c7245318793de1ccd741b6f8232 WHIRLPOOL 8234c7334f7690143aa7552b975f9a39fd27bcc6f2350ddf423e5fe20cc759bb178cd16bfe59bb1921dd217cb4a6ec6398faadd2caaf111a88e61b5523f1778b
+MISC ChangeLog 5290 SHA256 5a81290b19e976c2a22d799f75bd8acb50ae56a239d9d8c97d1d6e56b8d2d400 SHA512 67373e3d1e0bb15d09a914feefc0deb71eb5175b2dbda128163971c8695059776b6eff560474fcd4e619ad273e04f2507d2b00fc93c635053926e1fbfacb6997 WHIRLPOOL b6c1d5d627ed11eb05bccae9b778462c37e10523e13af9271424dbce4a1778489846924149c7b5201e0637eec1c399aed279563193f124442a682d89fcdb021e
 MISC metadata.xml 443 SHA256 03debe78c824fb81c25113a8382fd7b457061eb40a5213a51d13fd6a71668390 SHA512 15e9d16b480e8d1c0339d48908895ddcf426c9e35cb4dad37ceadc62b84969b616a07e317a5943436f84e54f64877f6e2a7197562b9bd84ea90a300ef295f0da WHIRLPOOL 4b77712b446885eaa8643720c9b9a350d0724054083883119163dd4ab94e9586cf895d16b2cf27ea63b8d4bc1ca1ef2d68608372087db6a5526b6dd68a30cf4d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJUTTY6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJUTT55XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirGFUP/jNLCidhJKzDmc0Mfl2b41/s
-UHrS+jojA4/EuyT/XrXXn7O3u1ddCpwEHIP4JJ4bBB5qYwhmsFKEtvVqTtjeqjDe
-n86XhWveul7MJPZKnE5Wxg1+jKUqeD09zMOi+Yo4B2Rh6AKOw51mwBRJhqOsK8jm
-PBlNvqxaCPgleJCGUXLSKNnmXYq50dfYBz8cYRoV5Oy4g6O8YBSH0n45PMTTlfxY
-ePRgFGzVM8V379GLAyIOcd+KwXkbzK47k9uYIZmz8E6ekIQ5JK6nzCpFMkqYOlXe
-ES1Kc/M5Tl1Yux/1XAdEzb2eb+mHzoN6IzxriPcVOnaokvLTNVmxJFJAl9i3l/Hw
-K2PrK/3y6T9DFt/f84SeMEZ+FEmftli2mLiGcI3z2+jhkkzZV+v1QbdJiD/ZnHtI
-lwgTLFzkFYH0QjQFM889Zub9FjrjBsB4urO9TpaPXU0I4gRGvhgZbfx+vpFGbOtx
-AGds3nt/AExlBDIoDP/U16znYUa4G8RiL88JBR7XBg2Nvj8RL8oF/m6kQXT4MSd/
-TkPHZppp8od2t+Wbir7NvFWi2TmTk3crwYPtFRL8waFB0nzRKVx/HSxKPNotaWk1
-ovYz2VIJ91078I5ac7Nr0ByHVs3VbxV2pBVJ0Xj2XSj2s+tEsH9V8JVuRsAu9emU
-CbFAVHoLy33mn6x92Phw
-=r4wb
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir1wIP/R9cL+T9pQOQgqPm9yTV2vcM
+NqqLSPiP7Xs18VYm0AdbgisKIhOabdhBapioLUaNornOd5gwxpHYw9RsSKwr1qW9
+zphj+dKtjkKzwN2BgRrKBri1G3kgePBgz1RPX2NDY8IlwhdztB35LBXUMkV0tDGH
+/ahucF+8iR+ZcF38aoJJNTOPLcpiwXroR+drrcoUrTfiEEaGTSAj6LcRfbiuJpaz
+/3yt5dIi0pHE22h2hLZ9ZtPZvQdZmTwXWUHfWl+QQ9Z4oVvnXybOKdslrcpBXrUs
+kzhyRkJCBae+UIh7cgD5w3Yl2vFwVcprLm7BTGPxvEv7yHjyuE1SNLsOwFzDwAQv
+cZe8bCE+5w+pWU98XPsZNjKzJZlrEMCaO0dz/1NNrkAWdxjw0maxuExHJ0WS0Gsg
+tar57PtUKa35Xa/tQy7O+LpkTkVYYGZIovw/qE017u0y/sPRy+dpko6rlzPHcR5r
+yYVG8q4y0LlTXs9Oy/2VRkLjJ8AS2gpoD7hvR0pX0kaPWNce/+FXGzlhmc90U7Yk
+gFK3IRK7cgCu/CHj8j4jpM3vm/ITW5w4UhryO4sj45aDNmMpwG0zUvaT43ds6/b4
+TgNbcI14LbGwtRUUSmrJRLDwZeCw3M+wHWmcJatExM6vt4McEbglbhUOFIKzEWJd
+o2duXPi6Z1TYj2bibBZt
+=iEiF
 -----END PGP SIGNATURE-----
